[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_tool = "1.0.3"
priority-queue = "1.3.0"
crossterm = "0.25.0"
tokio = {version = "1", features=["rt", "macros", "rt-multi-thread"]}